--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <ul>
                         <li>HTML5</li>
                         <li>build up a website structure using tags</li>
-                        <li>Create difficult tables</li>
+                        <li>Create complex tables</li>
                         <li>Write various forms</li>
                     </ul>
                 </div>
